--- a/src/app/user/myprofile.component.html
+++ b/src/app/user/myprofile.component.html
@@ -35,7 +35,7 @@
             <li [ngClass]="{ 'active': activeTab == 'friends' }"><a (click)="moveTab('friends')" class="links">Amigos</a></li>
             <li [ngClass]="{ 'active': activeTab == 'following' }"><a (click)="moveTab('following')" class="links">Siguiendo</a></li>
             <li [ngClass]="{ 'active': activeTab == 'followers' }"><a (click)="moveTab('followers')" class="links">Seguidores</a></li>
-            <li [ngClass]="{ 'active': activeTab == 'badges' }"><a (click)="moveTab('badges')" class="links">Insignias</a></li>
+            <li [ngClass]="{ 'active': activeTab == 'badges' }"><a (click)="moveTab('badges')" class="links">Insignias <span *ngIf="insgniasNoVistas > 0" class="badge">{{insgniasNoVistas}}</span></a></li>
             <li *ngIf="usuario.tipoUsuario == 'PROFESOR'" [ngClass]="{ 'active': activeTab == 'tg' }"><a (click)="moveTab('tg')" class="links">TG Dirigidos</a></li>
             <li *ngIf="usuario.tipoUsuario != 'ESTUDIANTE'" [ngClass]="{ 'active': activeTab == 'career' }"><a (click)="moveTab('career')" class="links">Formación académica</a></li>
         </ul>
@@ -68,53 +68,53 @@
         </div>
     </div>
     <div class="col-xs-7">
-        <div class="panel panel-default"> 
-        <div class="panel-heading">
-            <form>
-                <div class="form-group">
-                    <label for="sel1">Seleccione el tipo de idea:</label>
-                    <select class="form-control" id="sel1" [(ngModel)]="selectedValueTipo" name="tipoIdea" [ngModelOptions]="{standalone: true}">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <form>
+                    <div class="form-group">
+                        <label for="sel1">Seleccione el tipo de idea:</label>
+                        <select class="form-control" id="sel1" [(ngModel)]="selectedValueTipo" name="tipoIdea" [ngModelOptions]="{standalone: true}">
                         <option value="NU">Nueva</option>
                         <option value="PC">Para continuar</option>
                         <option value="PE">Para empezar</option>
                         <option value="PR">Proyecto</option>
                     </select>
-                </div>
-                <div class="form-group">
-                    <h4>Contenido</h4>
-                    <textarea class="form-control" rows="5" [(ngModel)]="contenido" name="content"></textarea>
-                </div>
+                    </div>
+                    <div class="form-group">
+                        <h4>Contenido</h4>
+                        <textarea class="form-control" rows="5" [(ngModel)]="contenido" name="content"></textarea>
+                    </div>
 
-                <div class="form-group" *ngIf="selectedValueTipo == 'PC' || selectedValueTipo == 'PE'">
-                    <label for="numeroest">Numero de estudiantes: </label>
-                    <input class="form-control" type="number" [(ngModel)]="numeroEstudiantes" name="numero">
-                </div>
+                    <div class="form-group" *ngIf="selectedValueTipo == 'PC' || selectedValueTipo == 'PE'">
+                        <label for="numeroest">Numero de estudiantes: </label>
+                        <input class="form-control" type="number" [(ngModel)]="numeroEstudiantes" name="numero">
+                    </div>
 
-                <div class="form-group" *ngIf="selectedValueTipo == 'PE'">
-                    <label for="alcance">Alcance: </label>
-                    <input class="form-control" type="text" [(ngModel)]="alcance" name="alc">
-                    <label for="problematica">Problematica: </label>
-                    <textarea class="form-control" type="text" [(ngModel)]="problematica" rows = '5' name="problem"></textarea>
-                </div>
-                <div class="form-group" *ngIf="selectedValueTipo == 'PR'">
-                    <button type="button" class="btn" (click) = "agregarIdeas()">Agregar ideas</button>
-                </div>
+                    <div class="form-group" *ngIf="selectedValueTipo == 'PE'">
+                        <label for="alcance">Alcance: </label>
+                        <input class="form-control" type="text" [(ngModel)]="alcance" name="alc">
+                        <label for="problematica">Problematica: </label>
+                        <textarea class="form-control" type="text" [(ngModel)]="problematica" rows='5' name="problem"></textarea>
+                    </div>
+                    <div class="form-group" *ngIf="selectedValueTipo == 'PR'">
+                        <button type="button" class="btn" (click)="agregarIdeas()">Agregar ideas</button>
+                    </div>
 
-                <div class="form-group" *ngIf="selectedValueTipo == 'PC'">
-                    <button type="button" class="btn" (click) = "asociarTG()">Asociar tg</button>
-                </div>
+                    <div class="form-group" *ngIf="selectedValueTipo == 'PC'">
+                        <button type="button" class="btn" (click)="asociarTG()">Asociar tg</button>
+                    </div>
 
-                <p-autoComplete [(ngModel)]="selectedTags" [suggestions]="filteredTagsMultiple" (completeMethod)="filterTagMultiple($event)"
-                    [minLength]="1" placeholder="Tags" field="nombre" [multiple]="true" [ngModelOptions]="{standalone: true}">
-                </p-autoComplete>
-                <div class="alert alert-danger" *ngIf = "valid === false">
-                    <label> Por Favor completar el formulario.</label>
-                </div>
-                <br>
-                <button type="button" (click)="crearIdea()" class="btn btn-primary">Publicar</button>
-            </form>
+                    <p-autoComplete [(ngModel)]="selectedTags" [suggestions]="filteredTagsMultiple" (completeMethod)="filterTagMultiple($event)"
+                        [minLength]="1" placeholder="Tags" field="nombre" [multiple]="true" [ngModelOptions]="{standalone: true}">
+                    </p-autoComplete>
+                    <div class="alert alert-danger" *ngIf="valid === false">
+                        <label> Por Favor completar el formulario.</label>
+                    </div>
+                    <br>
+                    <button type="button" (click)="crearIdea()" class="btn btn-primary">Publicar</button>
+                </form>
+            </div>
         </div>
-    </div>
         <div class="panel panel-default center" *ngFor="let idea of ideas; index as indice">
             <idea [idea]="idea" (change)="cambio($event)"></idea>
         </div>
@@ -190,8 +190,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <button type="button" (click)="editCarrera(false,false)" class="btn btn-success btn-circle btn-aval right"><i class="glyphicon glyphicon-pencil"></i></button>
-                    <button type="button" (click)="eliminarCarrera()"
-                        class="btn btn-danger btn-circle btn-aval right"><i class="glyphicon glyphicon-minus"></i></button>
+                    <button type="button" (click)="eliminarCarrera()" class="btn btn-danger btn-circle btn-aval right"><i class="glyphicon glyphicon-minus"></i></button>
                     <h2>{{usuario.segundaCarrera.nombre}}</h2>
                     <div class="panel panel-default">
                         <div class="panel-body">
@@ -232,8 +231,7 @@
             <div *ngFor="let a of usuario.amigos" class="col-xs-4">
                 <div class="card">
                     <button type="button" data-toggle="tooltip" title="Eliminar" (click)="eliminarAmigo(a.username)" class="btn btn-danger btn-circle remove"><i class="glyphicon glyphicon-remove"></i></button>
-                    <img src="{{serverUri}}{{s.username}}"
-                            (error)="errorImageHandler($event,s.username,s.genero)" class="profile_image">
+                    <img src="{{serverUri}}{{a.username}}" (error)="errorImageHandler($event,s.username,s.genero)" class="profile_image">
                     <div class="container-card">
                         <h2 class="name-card">{{a.nombre}}</h2>
                         <p class="title-card">{{a.carrera}}</p>
@@ -254,8 +252,7 @@
         <div class="row">
             <div *ngFor="let s of usuario.seguidores" class="col-xs-4">
                 <div class="card">
-                    <img src="{{serverUri}}{{s.username}}"
-                            (error)="errorImageHandler($event,s.username,s.genero)" class="profile_image">
+                    <img src="{{serverUri}}{{s.username}}" (error)="errorImageHandler($event,s.username,s.genero)" class="profile_image">
                     <div class="container-card">
                         <h2 class="name-card">{{s.nombre}}</h2>
                         <p class="title-card">{{s.carrera}}</p>
@@ -277,8 +274,7 @@
         <div class="row">
             <div *ngFor="let s of usuario.siguiendo" class="col-xs-4">
                 <div class="card">
-                    <img src="{{serverUri}}{{s.username}}"
-                            (error)="errorImageHandler($event,s.username,s.genero)" class="profile_image">
+                    <img src="{{serverUri}}{{s.username}}" (error)="errorImageHandler($event,s.username,s.genero)" class="profile_image">
                     <div class="container-card">
                         <h2 class="name-card">{{s.nombre}}</h2>
                         <p class="title-card">{{s.carrera}}</p>
@@ -293,10 +289,36 @@
 <div *ngIf="activeTab == 'badges'" class="row">
     <div class="col-xs-2"></div>
     <div class="col-xs-8">
-        <h3 *ngIf="!usuario.insignias || usuario.insignias?.length == 0">Aún no ha conseguido insignias para mostrar.</h3>
         <div class="row">
-            <div *ngFor="let a of usuario.insignias" class="col-xs-6">
-                {{a}}
+            <div class="col-xs-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <div class="media">
+                            <div class="media-left">
+                                <img src="images/personalidades/{{usuario.personalidad.nombre}}.png" class="media-object" style="width:60px">
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">Registro exitoso</h4>
+                                <p>Por haber completado el registro de forma exitosa</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div *ngFor="let a of usuario.insignias" class="col-xs-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <div class="media">
+                            <div class="media-left">
+                                <img src="images/motor.png" class="media-object" style="width:60px">
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">{{a.nombre}}</h4>
+                                <p>{{a.descripcion}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
