--- a/src/app/user/myprofile.component.html
+++ b/src/app/user/myprofile.component.html
@@ -38,6 +38,7 @@
             <li [ngClass]="{ 'active': activeTab == 'badges' }"><a (click)="moveTab('badges')" class="links">Insignias <span *ngIf="insgniasNoVistas > 0" class="badge">{{insgniasNoVistas}}</span></a></li>
             <li *ngIf="usuario.tipoUsuario == 'PROFESOR'" [ngClass]="{ 'active': activeTab == 'tg' }"><a (click)="moveTab('tg')" class="links">TG Dirigidos</a></li>
             <li *ngIf="usuario.tipoUsuario != 'ESTUDIANTE'" [ngClass]="{ 'active': activeTab == 'career' }"><a (click)="moveTab('career')" class="links">Formación académica</a></li>
+            <li *ngIf="usuario.tipoUsuario == 'ESTUDIANTE'" [ngClass]="{ 'active': activeTab == 'likes' }"><a (click)="moveTab('likes')" class="links">Gustos</a></li>
         </ul>
     </div>
 </nav>
@@ -133,7 +134,7 @@
                     <button type="button" (click)="editHabilidadCualidad()" class="btn btn-success btn-circle right"><i class="glyphicon glyphicon-pencil"></i></button>
                     <h3>Habilidades personales:</h3>
                     <p *ngIf="habilidadesPersonales?.length == 0">No tiene habilidades personales registradas</p>
-                    <button *ngFor="let h of habilidadesPersonales" type="button" class="btn btn-default btn-aval">{{h.nombre}} <span class="badge">{{h.avales}}</span></button>
+                    <button *ngFor="let h of habilidadesPersonales" type="button" class="btn btn-default btn-aval disabled">{{h.nombre}} <span class="badge">{{h.avales}}</span></button>
                     <!--<p *ngFor="let h of habilidadesPersonales">{{h.nombre}} <span class="label label-default">{{h.avales}}</span></p>-->
                 </div>
             </div>
@@ -144,7 +145,7 @@
                     <button type="button" (click)="editHabilidadCualidad()" class="btn btn-success btn-circle right"><i class="glyphicon glyphicon-pencil"></i></button>
                     <h3>Cualidades como profesor:</h3>
                     <p *ngIf="usuario.cualidades?.length == 0">No tiene cualidades como profesor registradas</p>
-                    <button *ngFor="let c of usuario.cualidades" type="button" class="btn btn-default btn-aval">{{c.nombre}} <span class="badge">{{c.avales}}</span></button>
+                    <button *ngFor="let c of usuario.cualidades" type="button" class="btn btn-default btn-aval disabled">{{c.nombre}} <span class="badge">{{c.avales}}</span></button>
                 </div>
             </div>
         </div>
@@ -157,7 +158,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <button type="button" (click)="editCarrera(true,false)" class="btn btn-success btn-circle btn-aval right"><i class="glyphicon glyphicon-pencil"></i></button>
-                    <button *ngIf="!usuario.segundaCarrera && !usuario.tipoUsuario != 'PROFESOR'" type="button" (click)="editCarrera(false,true)"
+                    <button *ngIf="!usuario.segundaCarrera && usuario.tipoUsuario != 'PROFESOR'" type="button" (click)="editCarrera(false,true)"
                         class="btn btn-primary btn-circle btn-aval right"><i class="glyphicon glyphicon-plus"></i></button>
                     <h2>{{usuario.carrera.nombre}}</h2>
                     <div class="panel panel-default">
@@ -180,12 +181,12 @@
                         <div *ngIf="usuario.tipoUsuario != 'PROFESOR'" class="panel-body">
                             <h3>Habilidades profesionales:</h3>
                             <p *ngIf="habilidadesProfesionales?.length == 0">No tiene habilidades profesionales registradas</p>
-                            <button *ngFor="let h of habilidadesProfesionales" type="button" class="btn btn-default btn-aval">{{h.nombre}} <span class="badge">{{h.avales}}</span></button>
+                            <button *ngFor="let h of habilidadesProfesionales" type="button" class="btn btn-default btn-aval disabled">{{h.nombre}} <span class="badge">{{h.avales}}</span></button>
                         </div>
                         <div *ngIf="usuario.tipoUsuario == 'PROFESOR'" class="panel-body">
                             <h3>Cualidades profesionales:</h3>
                             <p *ngIf="habilidadesProfesionales?.length == 0">No tiene cualidades profesionales registradas</p>
-                            <button *ngFor="let h of usuario.habilidades" type="button" class="btn btn-default btn-aval">{{h.nombre}} <span class="badge">{{h.avales}}</span></button>
+                            <button *ngFor="let h of usuario.habilidades" type="button" class="btn btn-default btn-aval disabled">{{h.nombre}} <span class="badge">{{h.avales}}</span></button>
                         </div>
                     </div>
                 </div>
@@ -215,7 +216,7 @@
                         <div class="panel-body">
                             <h3>Habilidades profesionales:</h3>
                             <p *ngIf="habilidadesProfesionalesSeg?.length == 0">No tiene habilidades profesionales registradas</p>
-                            <button *ngFor="let h of habilidadesProfesionalesSeg" type="button" class="btn btn-default btn-aval">{{h.nombre}} <span class="badge">{{h.avales}}</span></button>
+                            <button *ngFor="let h of habilidadesProfesionalesSeg" type="button" class="btn btn-default btn-aval disabled">{{h.nombre}} <span class="badge">{{h.avales}}</span></button>
                         </div>
                     </div>
                 </div>
@@ -236,7 +237,7 @@
             <div *ngFor="let a of usuario.amigos" class="col-xs-4">
                 <div class="card">
                     <button type="button" data-toggle="tooltip" title="Eliminar" (click)="eliminarAmigo(a.username)" class="btn btn-danger btn-circle remove"><i class="glyphicon glyphicon-remove"></i></button>
-                    <img src="{{serverUri}}{{a.username}}" (error)="errorImageHandler($event,s.username,s.genero)" class="profile_image">
+                    <img src="{{serverUri}}{{a.username}}" (error)="errorImageHandler($event,a.username,a.genero)" class="profile_image">
                     <div class="container-card">
                         <h2 class="name-card">{{a.nombre}}</h2>
                         <p class="title-card">{{a.carrera}}</p>
@@ -367,5 +368,57 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+<div *ngIf="activeTab == 'likes'" class="row">
+    <div class="col-xs-12" *ngIf="!editLikes">
+        <button type="button" (click)="setEditLikes()" class="btn btn-success btn-block">Editar gustos</button><br>
+        <div class="panel panel-default" *ngIf="!usuario.gustos || usuario.gustos?.length == 0">
+            <div class="panel-heading center">
+                <h3>No tiene gustos seleccionados.</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-2" *ngFor="let g of usuario.gustos">
+                <a class="thumbnail"><img src="images/gustos/{{g.imagePath}}" class="img-responsive"></a>
+            </div>
+        </div>
+    </div>
+    <div *ngIf="editLikes" class="well well-lg">
+        <h2>Mis gustos</h2>
+        <p>Seleccione cada uno de sus gustos.</p>
+        <ul class="nav nav-tabs">
+            <li [ngClass]="{'active resaltar': activeTabGustos == 'generales'}"><a data-toggle="tab" (click)="goTo('generales','gustos')">Generales</a></li>
+            <li [ngClass]="{'active resaltar': activeTabGustos == 'deportes'}"><a data-toggle="tab" (click)="goTo('deportes','gustos')">Deportes</a></li>
+            <li [ngClass]="{'active resaltar': activeTabGustos == 'artes'}"><a data-toggle="tab" (click)="goTo('artes','gustos')">Artes</a></li>
+        </ul>
+
+        <div class="tab-content">
+            <div id="generales" [ngClass]="activeTabGustos == 'generales' ? 'tab-pane fade in active' : 'tab-pane fade'">
+                <br>
+                <div *ngIf="activeTabGustos == 'generales'" class="row">
+                    <div class="col-xs-2" *ngFor="let g of gustosGenerales">
+                        <a [ngClass]="isCheckWithId(g,gustos) ? 'thumbnail check':'thumbnail'" (click)="checkGusto(g)"><img src="images/gustos/{{g.imagePath}}" class="img-responsive"></a>
+                    </div>
+                </div>
+            </div>
+            <div id="deportes" [ngClass]="activeTabGustos == 'deportes' ? 'tab-pane fade in active' : 'tab-pane fade'">
+                <br>
+                <div *ngIf="activeTabGustos == 'deportes'" class="row">
+                    <div class="col-xs-2" *ngFor="let g of gustosDeportes">
+                        <a [ngClass]="isCheckWithId(g,gustos) ? 'thumbnail check':'thumbnail'" (click)="checkGusto(g)"><img src="images/gustos/{{g.imagePath}}" class="img-responsive"></a>
+                    </div>
+                </div>
+            </div>
+            <div id="artes" [ngClass]="activeTabGustos == 'artes' ? 'tab-pane fade in active' : 'tab-pane fade'">
+                <br>
+                <div *ngIf="activeTabGustos == 'artes'" class="row">
+                    <div class="col-xs-2" *ngFor="let g of gustosArtes">
+                        <a [ngClass]="isCheckWithId(g,gustos) ? 'thumbnail check':'thumbnail'" (click)="checkGusto(g)"><img src="images/gustos/{{g.imagePath}}" class="img-responsive"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button (click)="saveLikes()" class="btn btn-primary btn-block">Guardar</button>
     </div>
 </div>
