correcciones y cambio de estado de idea

--- a/src/app/idea/idea.component.html
+++ b/src/app/idea/idea.component.html
@@ -27,7 +27,7 @@
                 class="btn btn-default btn-block"><i class="glyphicon glyphicon-comment" >
                 </i> Comentar</button></div>
             <div class="col-xs-4"><button type="button" class="btn btn-default btn-block"
-                (click) = "compartir()" [class.disabled] = "idea.isCompartida">
+                (click) = "compartir()" [class.disabled] = "idea.compartida">
                 <i class="glyphicon glyphicon-share"></i> Share</button></div>
         </div>    
 </div>
