--- a/src/app/modals/operacionIdea.component.html
+++ b/src/app/modals/operacionIdea.component.html
@@ -1,7 +1,7 @@
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" (click)="close()">&times;</button>
+            <button type="button" class="close" (click)="aceptar()">&times;</button>
             <h4 class="modal-title" *ngIf = "tipo === 'light'">Lights</h4>
             <h4 class="modal-title" *ngIf = "tipo === 'comentarios'">Comentarios</h4>
         </div>
