--- a/src/app/leaderBoard/leader.component.html
+++ b/src/app/leaderBoard/leader.component.html
@@ -3,20 +3,22 @@
         <div class="col-xs-6">
                 <p-dataList [value]="carreras" [paginator]="true" [rows]="5">
                         <p-header>
-                            ¡ListBoard Carreras!
+                            <b>¡ListBoard Carreras!</b>
                         </p-header>
                         <ng-template let-carrera pTemplate="item">
                             <div class="ui-g ui-fluid carrera-item">
-                                <div class="ui-g-12 ui-md-3" style="text-align:center">
+                                <div  class="ui-g-12 ui-md-3" style="text-align:center">
                                     <!--<img src="assets/showcase/images/demo/car/{{car.brand}}.png">-->
-                                    <img src="images/idea.png" style="width:20px">
+                                    <img *ngIf="carrera.nombre== carreras[0].nombre" src="images/leaderBoard/1.png" style="width:90px">
+                                    <img *ngIf="carrera.nombre== carreras[1].nombre" src="images/leaderBoard/2.png" style="width:80px">
+                                    <img *ngIf="carrera.nombre== carreras[2].nombre" src="images/leaderBoard/3.png" style="width:70px">
                                 </div>
                                 <div class="ui-g-12 ui-md-9 carrera-details">
-                                    <div class="ui-g">
-                                        <div class="ui-g-2 ui-sm-6">Carrera: </div>
-                                        <div class="ui-g-10 ui-sm-6">{{carrera.carrera}}</div>
+                                    <div  class="ui-g">
+                                      <div class="ui-g-2 ui-sm-6"> <b>Carrera: </b></div>
+                                        <div class="ui-g-10 ui-sm-6">{{carrera.nombre}}</div>
                                         
-                                        <div class="ui-g-2 ui-sm-6">Cantidad: </div>
+                                        <div class="ui-g-2 ui-sm-6"> <b>Cantidad: </b></div>
                                         <div class="ui-g-10 ui-sm-6">{{carrera.cantidad}}</div>
                                     </div>
                                 </div>
