mostrar numero de ideas y trabajo de grado asociado

--- a/src/app/modals/crear-idea.component.html
+++ b/src/app/modals/crear-idea.component.html
@@ -47,7 +47,15 @@
                     <label> Por Favor completar el formulario.</label>
                 </div>
                 <br>
-                <button type="button" (click)="crearIdea()" class="btn btn-primary">Publicar</button>
+                <div class="row">
+                    <div class="col-xs-5">
+                        <button type="button" (click)="crearIdea()" class="btn btn-primary">Publicar</button>
+                    </div>
+                    <div class="col-xs-7">
+                        <label *ngIf="selectedValueTipo == 'PR'">Número de ideas: {{ideasPro.length}}</label>
+                        <label *ngIf="selectedValueTipo == 'PC'">Trabajo de grado asociado: {{tg.nombre}}</label>
+                    </div>
+                </div>
             </form>
         </div>
     </div> 
