--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,8 @@
             <div *ngIf="loggeado">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a id="navbarred" href="#">Inicio <span class="sr-only"></span></a></li>
-                    <li><a *ngIf="!isAdmin" id="navbarred" class="links" (click)="myProfile()">Mi perfil <span class="sr-only"></span></a></li>
+                    <li><a *ngIf="!isAdmin" id="navbarred" (click)="myProfile()">Mi perfil <span class="sr-only"></span></a></li>
+                    <li><a id="navbarred" (click)="leaderBoard()" >LeaderBoard <span class="sr-only"></span></a></li>
                     <li><a id="navbarred" (click)="logout()">Cerrar sesión <span class="sr-only"></span></a></li>
                 </ul>
             </div>
