--- a/src/app/leaderBoard/leader.component.html
+++ b/src/app/leaderBoard/leader.component.html
@@ -3,7 +3,7 @@
         <div class="col-xs-6">
                 <p-dataList [value]="carreras" [paginator]="true" [rows]="5">
                         <p-header>
-                            <b>¡ListBoard Carreras!</b>
+                            <b>¡LeaderBoard Carreras!</b>
                         </p-header>
                         <ng-template let-carrera pTemplate="item">
                             <div class="ui-g ui-fluid carrera-item">
