ajustes de trabajos de grado de egresado

--- a/src/app/admin/admin-crud.component.html
+++ b/src/app/admin/admin-crud.component.html
@@ -6,7 +6,7 @@
             <ul class="nav navbar-nav">
                 <li [ngClass]="{ 'active': activeTab == 'etiquetas' }"><a (click)="moveTab('etiquetas')" class="links">Tags</a></li>
                 <li [ngClass]="{ 'active': activeTab == 'habilidades' }"><a (click)="moveTab('habilidades')" class="links">Habilidades</a></li>
-                <li [ngClass]="{ 'active': activeTab == 'gustos' }"><a (click)="moveTab('gustos')" class="links">Gustos</a></li>
+                <!-- <li [ngClass]="{ 'active': activeTab == 'gustos' }"><a (click)="moveTab('gustos')" class="links">Gustos</a></li> -->
                 <li [ngClass]="{ 'active': activeTab == 'carreras' }"><a (click)="moveTab('carreras')" class="links">Carreras</a></li>
                 <li [ngClass]="{ 'active': activeTab == 'enfasis' }"><a (click)="moveTab('enfasis')" class="links">Énfasis</a></li>
             </ul>
